Fixed issue on mobile with post links

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -69,10 +69,10 @@
 
       li {
         display: inline-block;
-        margin-left: 1.5em;
+        margin-right: 1.5em;
 
-        &:first-child {
-          margin-left: 0em;
+        &:last-child {
+          margin-right: 0em;
         }
 
         span.icon {
